--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -1,25 +1,39 @@
 001
-catfish
+bug hunt
 start
 
-# Mission // #001
+# Mission // 001
 
-## Catfish
+## Bug Hunt
 
-*“Life is full of surprises, some good, some not so good...”*  
-
+*HUDSON: “Is this going to be a stand-up fight, sir, or another bug-hunt?”*
+*GORMAN: “All we know is that there is still no contact with the colony, and that a xenomorph may be involved.”*
+*FROST: “Excuse me sir, a what?”*
+*GORMAN: “A xenomorph.”*
+*HICKS (louder): “It’s a bug-hunt.”*
 
 # Goals
 
-- Locate the ship of a lieutenant from the Vector dogs.
-- Acquire the hash-id of the ship.
-- Storm the compound of the Vector Dogs.
+- Protect Evergreen engineering teams during deployment to outlying relays.
+- Identify and eliminate sniper presence disrupting relay maintenance.
+- Investigate abnormal signals and civilian silence near the Châus’ homestead.
+- Locate and shut down the source of the hostile broadcast.
 
 # Stakes
 
-- Information about the greasy-haired man's motives and whereabouts
-- Reputation amongst the higher ups at DIADEM
+- The safety of Evergreen’s frontline engineering personnel.
+- Maintaining signal relay integrity for colony-wide comms.
+- Preventing psychological warfare from spreading through Evergreen’s networks.
+- Understanding the first signs of an intelligence behind local machine aggression.
 
----
+## Union Colonial Response Log – Evergreen Perimeter
 
-> Space Station DIADEM 01 is wholly owned by DIADEM CORP. Work contracts are commonly passed along to the VECTOR DOGS, a pirate faction to do the will of DIADEM CORP. The location of the VECTOR DOG's compound is not known to the public. Using whatever means necessary, find their compound, raid it, and inside find key details related to the man that ended your upstart careers with MIRRORSMOKE.
+# PROVISIONAL PRIORITY – CLASSIFIED
+
+Operation began with a multi-squad deployment across the southern relay fields. Evergreen engineers encountered sustained fire from a long-range sniper platform of unknown make and origin. Pilots executed a split operation to neutralize the sniper while maintaining a defensive perimeter around the engineering team. Mission success: No civilian casualties, full relay recovery.
+
+Concurrent investigation of signal distortion near the Châu homestead revealed the presence of a powerful psychological broadcast. The farmhouse had been overrun—its occupants presumed dead or forcibly converted.
+
+Broadcast was terminated at the source after a close-quarters engagement with a unit of corrupted subalterns and industrial machinery. Source of signal bore clear technological similarities to Union-era architecture but had been extensively altered.
+
+Initial conclusion: Hostile entity possesses coordination capabilities, strategic foresight, and a clear ideological vector.
