--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -4,7 +4,7 @@ start
 
 # Mission // 001
 
-## Bug Hunt
+## BUG HUNT
 
 *HUDSON: “Is this going to be a stand-up fight, sir, or another bug-hunt?”*
 
@@ -16,28 +16,55 @@ start
 
 *HICKS (louder): “It’s a bug-hunt.”*
 
-# Goals
+# SITUATION OVERVIEW
 
-- Protect Evergreen engineering teams during deployment to outlying relays.
-- Identify and eliminate sniper presence disrupting relay maintenance.
-- Investigate abnormal signals and civilian silence near the Châus’ homestead.
-- Locate and shut down the source of the hostile broadcast.
+Following initial settlement efforts on Hercynia, the Evergreen Colony experienced sustained disruptions to operations due to hostile incursions of unknown origin. Contact loss and irregular subaltern behavior prompted Union to dispatch a Quick Response Force (QRF) to stabilize the area. Concurrently, Evergreen’s landing bowl—critical infrastructure for offworld resupply and support—was rendered non-operational due to sabotage and environmental degradation.
 
-# Stakes
+Union-aligned pilots were deployed to protect the engineering crews assigned to restore the landing zone, intercept hostile threats, and assess a rogue broadcast source affecting rural homesteads.
+
+# MISSION OBJECTIVES
 
 - The safety of Evergreen’s frontline engineering personnel.
 - Maintaining signal relay integrity for colony-wide comms.
 - Preventing psychological warfare from spreading through Evergreen’s networks.
 - Understanding the first signs of an intelligence behind local machine aggression.
 
-## Union Colonial Response Log – Evergreen Perimeter
+# CRITICAL TASKS
 
-# PROVISIONAL PRIORITY – CLASSIFIED
+Task Force Alpha (Smokey, Ferryman, Vet)
 
-Operation began with a multi-squad deployment across the southern relay fields. Evergreen engineers encountered sustained fire from a long-range sniper platform of unknown make and origin. Pilots executed a split operation to neutralize the sniper while maintaining a defensive perimeter around the engineering team. Mission success: No civilian casualties, full relay recovery.
+› DEFEND THE LANDING BOWL
 
-Concurrent investigation of signal distortion near the Châu homestead revealed the presence of a powerful psychological broadcast. The farmhouse had been overrun—its occupants presumed dead or forcibly converted.
+Escort mission for Chief Engineer Castor Fielding and technicians assigned to re-establish Evergreen’s landing zone. Pilots engaged in close-range skirmishes to repel multiple waves of hostile subalterns, allowing successful repair and reactivation of the site.
 
-Broadcast was terminated at the source after a close-quarters engagement with a unit of corrupted subalterns and industrial machinery. Source of signal bore clear technological similarities to Union-era architecture but had been extensively altered.
+Task Force Bravo (Outlaw, Vanisher, Huntsman)
 
-Initial conclusion: Hostile entity possesses coordination capabilities, strategic foresight, and a clear ideological vector.
+› SNIPER SUPPRESSION & BROADCAST INTERCEPT
+
+Initial operation targeted a mobile sniper platform that had inflicted severe losses on local militia. Upon elimination, Task Force Bravo pursued a corrupted signal to the Châu homestead, encountering hostile subalterns and repurposed machines. The broadcast was destroyed, and partial data was recovered from the field.
+
+# RESULTS & NOTES
+
+- Evergreen’s landing bowl fully restored, paving the way for future offworld landings and reinforcements.
+- Sniper eliminated with no militia casualties.
+- CYNOSURE was recovered and is now under Union supervision.
+
+# MISSION REWARD
+
+- All pilots advanced to License Level 1 (LL1).
+- Chief Engineer Fielding issued a core-battery unit to the squad.
+- STING-pattern armament recovered in the field.
+- Recovery of CYNOSURE, now partially stabilized.
+
+# STAKES
+
+This mission was critical to preserving Evergreen’s strategic viability. Failure would have resulted in the colony’s isolation and left the local population exposed to continued incursions. Completion reestablished a key logistics site and provided Union with its first substantive intelligence on the emerging enemy threat.
+
+# ADDITIONAL NOTES
+
+Recovered data implies a coordinated synthetic force operating independently of known factions. Signs of command hierarchy, psychological targeting, and reconfiguration of standard civilian subalterns have been noted. Further investigation is ongoing.
+
+### AUTHORIZED BY:
+### Haruki Oda
+### Union Administrative Liaison
+### Operational Command, Hercynia Crisis Response
