--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -2,8 +2,7 @@
 bug hunt
 start
 
-## Mission // 001
-
+# Mission // 001
 ### BUG HUNT
 
 # *HUDSON: “Is this going to be a stand-up fight, sir, or another bug-hunt?”*
