--- a/src/assets/events/000.md
+++ b/src/assets/events/000.md
@@ -1,14 +1,37 @@
-GRADUATION DAY
-LONG RIM
-x.yy.50zzu
-https://i.imgur.com/VuaM8xy.png
+IDEAS FROM THE PAST
+HERCYNIA
+~4500u - 5000u?
+https://drive.google.com/drive/folders/1M-uNQ_DXTAfGvIaXqkc2cxPiMCkyhpt5
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat varius quam, ac dictum purus. Curabitur nulla nisi, placerat ut dapibus nec, suscipit quis ligula. Morbi ipsum urna, vulputate id imperdiet rhoncus, lacinia id tortor. Vivamus dignissim consequat nisi, sed lobortis turpis gravida sit amet. Curabitur mattis nisi ut lorem gravida eleifend. Fusce bibendum sed ex quis efficitur. Curabitur mattis orci neque. Integer tortor elit, cursus sit amet mauris eu, cursus blandit magna. Vivamus lacinia vitae purus sagittis tincidunt. Sed tempus neque a sodales eleifend. Nulla vitae ipsum eget nulla sollicitudin porta.
+OVERVIEW:
+Upon arrival at Evergreen, the squad was briefed on the long-forgotten history of Union’s prior contact with Hercynia — a planet whose past is not just obscured by time, but by deliberate omission. What little remains of official records points to an ecological and ethical catastrophe carried out by the Second Committee.
 
-Maecenas nec leo arcu. Vestibulum suscipit ipsum ligula, at malesuada massa convallis ut. Proin aliquam mattis felis, ac ultricies felis varius vitae. Pellentesque luctus pellentesque venenatis. Fusce placerat efficitur mi, in ultricies orci aliquam condimentum. Phasellus ac ex rutrum, fermentum libero id, scelerisque diam. Etiam ultricies mattis mauris, sit amet viverra risus sagittis et. Duis id tincidunt justo.
+Of particular note is a recovered field report titled “On Egregorians: A Summary Report” by Dr. Eku Marricado, an Evergreen colonial scientist. Though riddled with gaps and speculation, the document paints a compelling — and disturbing — picture of what transpired here centuries ago.
 
-Aliquam et malesuada orci, id sollicitudin leo. In dolor nibh, euismod a arcu in, bibendum venenatis augue. Duis aliquam, nisi at accumsan ultrices, justo ligula pretium turpis, at pulvinar est sapien ac risus. Vestibulum scelerisque imperdiet diam eu placerat. Nam elementum, ligula sed cursus porta, turpis odio finibus libero, sed congue nisl risus non ex. Proin ornare pulvinar est, vitae pellentesque dui congue id. Sed pharetra nibh lacinia libero gravida congue.
+The squad has not encountered any living Egregorians, but signs of their legacy — and the trauma of their extermination — remain.
 
-Praesent feugiat nisl a eleifend cursus. Aliquam at nulla libero. Duis ornare tincidunt tortor ac laoreet. Sed metus elit, blandit non nibh sed, faucibus lacinia ligula. Ut egestas tristique sodales. In id pretium ante. Mauris egestas viverra turpis eu lobortis. Aenean non lectus nulla. Maecenas laoreet et elit in lacinia. Integer semper urna eu neque sodales volutpat quis in elit. Sed ligula velit, suscipit et ante eget, pretium dictum neque. Praesent in faucibus eros. Ut eu nisl tellus. Aenean metus libero, bibendum at magna vel, luctus luctus arcu. Donec justo ipsum, maximus ac dolor eu, viverra viverra velit. Donec dictum elit eu hendrerit feugiat.
+KEY INSIGHTS:
+1. First Contact & Extermination
+Hercynia was discovered in the early 46th century by a Second Committee Far Field team. Contact was made with the native species, later termed the Egregorians — eusocial, insectoid predators exhibiting swarm intelligence and rudimentary tool use. Within years, these same species were wiped out via a Total Biome Kill (TBK) operation. No formal justification has survived the purges of the Revolution.
 
-Curabitur fringilla odio et diam pulvinar sodales. Maecenas luctus, lectus nec mollis fermentum, eros sem ultrices nisi, et molestie neque lacus at mi. Duis vel ex diam. Etiam vel elit mattis, fringilla eros sollicitudin, fringilla tortor. Maecenas mi tortor, scelerisque vitae enim vitae, convallis malesuada mauris. Proin eu dapibus erat, sed condimentum felis. Nunc commodo, metus quis convallis venenatis, enim enim volutpat risus, a venenatis diam justo sit amet dui. Morbi varius libero lacus, non sodales nibh mollis sit amet. Suspendisse potenti. Pellentesque velit nibh, tristique id ullamcorper quis, eleifend id libero. Donec quam nunc, varius in tincidunt id, accumsan sit amet odio. Aliquam vehicula tortor sem, ut sagittis elit convallis non. Donec sollicitudin ut tortor eget lacinia. Morbi quis convallis massa. Morbi ultrices augue augue, eget pretium ipsum porttitor vitae. 
+2. The Wargame Hypothesis
+Dr. Marricado's most provocative theory suggests that the Egregorians were deliberately trained by Second Committee forces to serve as biological stand-ins for war exercises. Their capacity for learning, communication, and tool-use made them ideal — until it made them lethal. Taught to use weapons and tactics, the Egregorians eventually turned these tools against their instructors.
+
+3. Catastrophic Escalation
+The escalation of hostilities saw the Egregorians evolve rapidly, adapting to human strategies and becoming more deadly with each engagement. The war became a mirror — Union’s own tools and tactics reflected back through alien minds. Unable to control their own creation, Second Committee ordered planetary sterilization.
+
+4. Ethical Fallout
+There is some suggestion that certain civilian personnel may have sided with the Egregorians — an act of rebellion that SecComm met with mass retaliation. In the end, no distinction was made between species. The campaign of extinction became total.
+
+5. What Remains
+No verified Egregorian lifeforms have been found in modern times. Some chitinous remnants and fossil traces remain, along with fragmented hive structures. Whether the Egregorians were truly wiped out or merely forced into dormancy remains unknown.
+
+CONSIDERATIONS:
+This report reflects theory, not confirmed history.
+
+Dr. Marricado’s conclusions are speculative, based on partial reconstructions.
+
+No official apology or investigation into SecComm actions on Hercynia has ever been declassified.
+
+CLASSIFIED ADDENDUM:
+As members of Union’s Hercynia Crisis Response, you are authorized to review this material. However, Union protocol requires that any new evidence related to Egregorian survival, behavior, or evolution be reported immediately to Union for further consideration.
