--- a/src/assets/events/000.md
+++ b/src/assets/events/000.md
@@ -3,7 +3,7 @@ HERCYNIA
 ~4500u - 5000u?
 https://i.imgur.com/pAInpSQ.png
 
-OVERVIEW:
+## OVERVIEW:
 
 Upon arrival at Evergreen, the squad was briefed on the long-forgotten history of Union’s prior contact with Hercynia — a planet whose past is not just obscured by time, but by deliberate omission. What little remains of official records points to an ecological and ethical catastrophe carried out by the Second Committee.
 
@@ -11,7 +11,7 @@ Of particular note is a recovered field report titled “On Egregorians: A Summa
 
 The squad has not encountered any living Egregorians, but signs of their legacy — and the trauma of their extermination — remain.
 
-KEY INSIGHTS:
+## KEY INSIGHTS:
 1. First Contact & Extermination
    
 Hercynia was discovered in the early 46th century by a Second Committee Far Field team. Contact was made with the native species, later termed the Egregorians — eusocial, insectoid predators exhibiting swarm intelligence and rudimentary tool use. Within years, these same species were wiped out via a Total Biome Kill (TBK) operation. No formal justification has survived the purges of the Revolution.
@@ -32,7 +32,7 @@ There is some suggestion that certain civilian personnel may have sided with the
    
 No verified Egregorian lifeforms have been found in modern times. Some chitinous remnants and fossil traces remain, along with fragmented hive structures. Whether the Egregorians were truly wiped out or merely forced into dormancy remains unknown.
 
-CONSIDERATIONS:
+## CONSIDERATIONS:
 
 This report reflects theory, not confirmed history.
 
@@ -40,5 +40,5 @@ Dr. Marricado’s conclusions are speculative, based on partial reconstructions.
 
 No official apology or investigation into SecComm actions on Hercynia has ever been declassified.
 
-CLASSIFIED ADDENDUM:
-As members of Union’s Hercynia Crisis Response, you are authorized to review this material. However, Union protocol requires that any new evidence related to Egregorian survival, behavior, or evolution be reported immediately to Union for further consideration.
+#CLASSIFIED ADDENDUM:
+# As members of Union’s Hercynia Crisis Response, you are authorized to review this material. However, Union protocol requires that any new evidence related to Egregorian survival, behavior, or evolution be reported immediately to Union for further consideration.
