--- a/src/assets/events/001.md
+++ b/src/assets/events/001.md
@@ -3,19 +3,19 @@ HERCYNIA
 5014u
 https://i.imgur.com/wX7se3D.jpeg
 
-UNION INTERNAL DOSSIER – FIELD DEPLOYMENT REFERENCE // DO NOT DISTRIBUTE OUTSIDE UNION OPERATIVES
+### UNION INTERNAL DOSSIER – FIELD DEPLOYMENT REFERENCE // DO NOT DISTRIBUTE OUTSIDE UNION OPERATIVES
 
-Approved by: PATIENCE-1
+# Approved by: PATIENCE-1
 
-Compiled by: Liaison Haruki Oda, Hercynia Crisis Response
+# Compiled by: Liaison Haruki Oda, Hercynia Crisis Response
 
-OVERVIEW:
+## OVERVIEW:
 
 This document serves as a primer for Union-affiliated operatives deployed to Evergreen Colony, located on Solo Terra, Hercynia. The following material summarizes critical logistical data, prominent individuals, and geographic zones of strategic importance.
 
 Evergreen is the last standing colony on Hercynia following the failure of multiple Landmark Colonial initiatives. Originally designed as an agricultural hub and expansion site, it has been transformed by necessity into a vulnerable but vital foothold for continued Union interest on the planet.
 
-INFRASTRUCTURE PROFILE:
+## INFRASTRUCTURE PROFILE:
 
 Population: ~1,300 individuals (pre-incident estimates)
 
@@ -25,7 +25,7 @@ Supply Lines: Severed orbital access; low-orbit drops via compromised Landing Bo
 
 Power Grid: Incomplete. Primary generation supplied via refurbished Landmark solar and geothermal stations.
 
-# STRATEGIC LOCATIONS:
+## STRATEGIC LOCATIONS:
 
 GOVERNOR’S FARM:
 
@@ -35,7 +35,7 @@ LANDING BOWL:
 
 Large impact-cleared basin originally built for heavy landers. Damaged during recent raids. Repair is essential for continued resupply and rapid evacuation scenarios.
 
-# PRIMARY CONTACTS:
+## PRIMARY CONTACTS:
 
 PATIENCE-1 – Evergreen’s Operational AI
 
@@ -53,7 +53,7 @@ Brava Hadura – Local Militia Commander
 
 A veteran of small-colony defense operations, Brava Hadura is the acting commander of the Evergreen militia. Originally a member of the colonial administration’s security detail, she stepped into command after Evergreen’s previous military overseer succumbed to illness shortly after settlement. Despite the overwhelming odds and poor equipment, she’s done her best to hold the line.
 
-# ADDITIONAL NOTES:
+## ADDITIONAL NOTES:
 
 CIVILIAN MORALE:
 
@@ -63,7 +63,7 @@ AUTOMATED UNITS:
 
 Evergreen subalterns are few and aging. Most labor functions have reverted to manual operation. No combat subalterns remain active, though a few were seen scavenging debris sites without orders.
 
-# UNKNOWN VARIABLES:
+## UNKNOWN VARIABLES:
 
 Prior colonial failures have left abandoned facilities across the region.
 
