--- a/src/assets/events/002.md
+++ b/src/assets/events/002.md
@@ -3,23 +3,23 @@ HERCYNIA
 5014u
 https://i.imgur.com/foY65zw.png
 
-# FIELD INTELLIGENCE REPORT
+## FIELD INTELLIGENCE REPORT
 
-SUBJECT: HUC Rangers – Status, Composition, and Behavior
+# SUBJECT: HUC Rangers – Status, Composition, and Behavior
 
-CLASSIFICATION: Level-B Clearance – Active Colonial Security Threat
+# CLASSIFICATION: Level-B Clearance – Active Colonial Security Threat (De-escalating)
 
-ISSUED BY: Liaison Haruki Oda, Union Command
+# ISSUED BY: Liaison Haruki Oda, Union Command
 
-DATE: Post-Mission 01 Debrief
+# DATE: Post-Mission 01 Debrief
 
-OVERVIEW
+## OVERVIEW
 
-The so-called “HUC Rangers” (designation inferred from uniform markings and encrypted transmissions) appear to be a paramilitary remnant of a defunct or blacklisted entity: Harrison-Ursinus Colonial (HUC). No active license exists for HUC within Union’s current corporate registry, and the last confirmed activity of the entity dates to pre-SecComm collapse. Current operating status: rogue.
+The HUC Rangers (believed to be remnants of the defunct Harrison-Ursinus Colonial entity) have shifted their stance from active hostility to cautious non-engagement. While Union does not formally recognize their legitimacy, intelligence gathered by Cinder Squad indicates that the HUC Rangers have ceased all open aggression toward Evergreen and its militia.
 
-Pilots first encountered these forces during the defense of Evergreen’s infrastructure and outlying settlements. Hostile engagements have confirmed that the HUC Rangers are highly organized, tactically competent, and operating with militarized discipline. They are not simple raiders—several units display formal mech training and operate in coordinated strike formations with a clear command structure.
+According to the latest report, Cinder Squad was first contacted by a commander of the Ranger's, while no definitive peace was confirmed, they did state an intention to stop hostilities and discuss things further.
 
-KNOWN ELEMENTS AND TACTICS
+## KNOWN ELEMENTS AND TACTICS
 
 Sniper Detachments: Initial engagement included a long-range precision unit capable of navigating Hercynian terrain with lethal effectiveness. Utilized cloaking tech and elevation for maximum disruption. Pilot-casualty risk considered high in open terrain.
 
@@ -29,7 +29,7 @@ Command Structure: While no commanding officer has been visually confirmed, beha
 
 Communication Protocols: Captured comms logs indicate references to “Rangers,” “Colonial Asset Defense,” and “Priority Site Authorization.” These are remnants of early colonial expansion-era parlance.
 
-POSSIBLE OBJECTIVES
+## POSSIBLE OBJECTIVES
 
 Union analysts propose the following hypotheses:
 
@@ -39,6 +39,8 @@ Legacy Directive: It is possible that these forces are operating under standing 
 
 Automated or Indoctrinated Doctrine: It remains possible some or all HUC personnel have undergone long-term indoctrination or have been raised in isolation, believing themselves to still be under lawful orders. Alternatively, some command-level functions may be partially automated.
 
-THREAT LEVEL
+## REVISED THREAT LEVEL
 
-The HUC Rangers are a Tier 1 Persistent Threat to Evergreen and Union operations on Hercynia. Their tactical discipline, refusal to respond to hails, and willingness to engage in lethal force place them beyond the profile of typical raider cells. They are not open to negotiation at this time.
+Downgraded from Tier 1 Persistent Threat to Tier 2 Strategic Uncertainty.
+
+While their recent behavior suggests a move toward negotiation, motive and reliability remain unknown. Historical indicators point to long-term ideological indoctrination and isolation from Union reality, which may complicate dialogue.
