--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -1,9 +1,9 @@
 001
 bug hunt
-start
+success
 
-# Mission // 001
-### BUG HUNT
+Mission // 001
+BUG HUNT
 
 # *HUDSON: “Is this going to be a stand-up fight, sir, or another bug-hunt?”*
 
