--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -15,55 +15,55 @@ BUG HUNT
 
 # *HICKS (louder): “It’s a bug-hunt.”*
 
-## SITUATION OVERVIEW
+### SITUATION OVERVIEW
 
 Following initial settlement efforts on Hercynia, the Evergreen Colony experienced sustained disruptions to operations due to hostile incursions of unknown origin. Contact loss and irregular subaltern behavior prompted Union to dispatch a Quick Response Force (QRF) to stabilize the area. Concurrently, Evergreen’s landing bowl—critical infrastructure for offworld resupply and support—was rendered non-operational due to sabotage and environmental degradation.
 
 Union-aligned pilots were deployed to protect the engineering crews assigned to restore the landing zone, intercept hostile threats, and assess a rogue broadcast source affecting rural homesteads.
 
-## MISSION OBJECTIVES
+### MISSION OBJECTIVES
 
 - The safety of Evergreen’s frontline engineering personnel.
 - Maintaining signal relay integrity for colony-wide comms.
 - Preventing psychological warfare from spreading through Evergreen’s networks.
 - Understanding the first signs of an intelligence behind local machine aggression.
 
-## CRITICAL TASKS
+### CRITICAL TASKS
 
 Task Force Alpha (Smokey, Ferryman, Vet)
 
-› DEFEND THE LANDING BOWL
+## › DEFEND THE LANDING BOWL
 
 Escort mission for Chief Engineer Castor Fielding and technicians assigned to re-establish Evergreen’s landing zone. Pilots engaged in close-range skirmishes to repel multiple waves of hostile subalterns, allowing successful repair and reactivation of the site.
 
 Task Force Bravo (Outlaw, Vanisher, Huntsman)
 
-› SNIPER SUPPRESSION & BROADCAST INTERCEPT
+## › SNIPER SUPPRESSION & BROADCAST INTERCEPT
 
 Initial operation targeted a mobile sniper platform that had inflicted severe losses on local militia. Upon elimination, Task Force Bravo pursued a corrupted signal to the Châu homestead, encountering hostile subalterns and repurposed machines. The broadcast was destroyed, and partial data was recovered from the field.
 
-## RESULTS & NOTES
+### RESULTS & NOTES
 
 - Evergreen’s landing bowl fully restored, paving the way for future offworld landings and reinforcements.
 - Sniper eliminated with no militia casualties.
 - CYNOSURE was recovered and is now under Union supervision.
 
-## MISSION REWARD
+### MISSION REWARD
 
 - All pilots advanced to License Level 1 (LL1).
 - Chief Engineer Fielding issued a core-battery unit to the squad.
 - STING-pattern armament recovered in the field.
 - Recovery of CYNOSURE, now partially stabilized.
 
-## STAKES
+### STAKES
 
 This mission was critical to preserving Evergreen’s strategic viability. Failure would have resulted in the colony’s isolation and left the local population exposed to continued incursions. Completion reestablished a key logistics site and provided Union with its first substantive intelligence on the emerging enemy threat.
 
-## ADDITIONAL NOTES
+### ADDITIONAL NOTES
 
 Recovered data implies a coordinated synthetic force operating independently of known factions. Signs of command hierarchy, psychological targeting, and reconfiguration of standard civilian subalterns have been noted. Further investigation is ongoing.
 
-# AUTHORIZED BY:
+## AUTHORIZED BY:
 # Haruki Oda
 # Union Administrative Liaison
 # Operational Command, Hercynia Crisis Response
