--- a/src/assets/missions/002.md
+++ b/src/assets/missions/002.md
@@ -26,7 +26,7 @@ Intercept attempts to sabotage the Stable Reactor’s key nodes.
 Prevent the Machine unit REGRET from reaching Patience’s casket in the Governor’s Farm.
 
 ### CRITICAL TASKS
-› REACTOR NODE INTERCEPT
+## › REACTOR NODE INTERCEPT
 
 Cinder Squad maneuvered through urban combat zones to intercept HUC forces already inside the reactor complex. The first of two key nodes was lost before they arrived, but their rapid advance prevented further destruction and preserved enough power for continued defense operations.
 
@@ -94,7 +94,7 @@ The Machine threat has escalated with the appearance of REGRET. Its origin and l
 
 Multiple parties now believe the conflict on Hercynia is no longer human in scope.
 
-##AUTHORIZED BY:
+## AUTHORIZED BY:
 # Haruki Oda
 # Union Administrative Liaison
 # Operational Command, Hercynia Crisis Response
