--- a/src/assets/missions/002.md
+++ b/src/assets/missions/002.md
@@ -5,13 +5,7 @@ success
 Mission // 002
 VIGILANT GAZE
 
-# HUDSON: “Independently targeting particle
--beam phalanx. VWAP? Fry half a city with
-this puppy. We got tactical smart-missiles,
-phased-plasma pulse-rifles, RPGs. We got
-sonic electronic ballbreakers, we got nukes,
-we got knives … sharp sticks–
-
+# HUDSON: “Independently targeting particle-beam phalanx. VWAP? Fry half a city with this puppy. We got tactical smart-missiles, phased-plasma pulse-rifles, RPGs. We got sonic electronic ballbreakers, we got nukes, we got knives … sharp sticks–
 
 ### SITUATION OVERVIEW
 After a lull in direct hostilities, Evergreen came under sudden and coordinated assault from the Hercynian United Cities Rangers. What appeared to be a frontal push against the walls was, in truth, a tactical diversion—designed to mask a more catastrophic strike on the heart of the colony’s infrastructure.
