--- a/src/assets/missions/002.md
+++ b/src/assets/missions/002.md
@@ -10,14 +10,12 @@ VIGILANT GAZE
 ### SITUATION OVERVIEW
 After a lull in direct hostilities, Evergreen came under sudden and coordinated assault from the Hercynian United Cities Rangers. What appeared to be a frontal push against the walls was, in truth, a tactical diversion—designed to mask a more catastrophic strike on the heart of the colony’s infrastructure.
 
-While Patience remained partially cycled and vulnerable, Cinder Squad responded as a single cohesive force, identifying and disrupting the true objective of the attack: the Stable Reactor that supports both Evergreen’s shield grid and the casket housing Patience-1.
-
 ### MISSION OBJECTIVES
 Repel enemy incursion at Evergreen’s outer defenses.
 
 Intercept attempts to sabotage the Stable Reactor’s key nodes.
 
-Prevent the Machine unit REGRET from reaching Patience’s casket in the Governor’s Farm.
+Prevent the HUC unit REGRET from reaching Patience’s casket in the Governor’s Farm.
 
 ### CRITICAL TASKS
 ## › REACTOR NODE INTERCEPT
@@ -26,7 +24,7 @@ Cinder Squad maneuvered through urban combat zones to intercept HUC forces alrea
 
 ## › REGRET CONFRONTATION
 
-The Machine designated REGRET infiltrated Evergreen through an eastern breach. Cinder Squad intercepted it on the approach to the Governor’s Farm. Despite its overwhelming firepower and unknown systems, the squad successfully neutralized the unit just short of its target.
+The Rogue contact REGRET infiltrated Evergreen through an eastern breach. Cinder Squad intercepted it on the approach to the Governor’s Farm. Despite its overwhelming firepower and unknown systems, the squad successfully neutralized the unit just short of its target.
 
 ### RESULTS & NOTES
 
