--- a/src/assets/missions/003.md
+++ b/src/assets/missions/003.md
@@ -1,6 +1,6 @@
 003
 floodgate
-start
+success
 
 Mission // 003
 FLOODGATE
@@ -48,7 +48,7 @@ Machine forces possess integrated subaltern/human hybrid systems.
 Patience remains operational, but is now considered compromised.
 
 ### MISSION STATUS
-This mission remains ongoing. The enemy is actively adapting, and Union considers the digital battlespace in Hercynia to be compromised. Strategic options are narrowing.
+This mission is complete. The enemy is actively adapting, and Union considers the digital battlespace in Hercynia to be compromised. Strategic options are narrowing.
 
 ### STAKES
 This is no longer a containment operation. With subalterns across the region exhibiting hive-like behavior and corrupted NHP elements spreading influence through both physical and digital vectors, this mission could mark the threshold between manageable insurgency and full-scale digital war. If Beggar One breaches Evergreen’s internal networks, Union presence on Hercynia may become unsustainable.
