--- a/src/assets/missions/004.md
+++ b/src/assets/missions/004.md
@@ -1,6 +1,6 @@
 004 - A
 Last Castle
-start
+Failure
 
 Mission // 004 - A
 LAST CASTLE
@@ -16,45 +16,63 @@ LAST CASTLE
 # HUDSON: “No. No! It ain’t you. They’re inside. Inside the perimeter. They’re in here.”
 
 ### SITUATION OVERVIEW
-Cinder Squad has returned to Evergreen under rapidly deteriorating conditions. Patience, the colony’s NHP administrator, has shown signs of severe instability, withholding access to communications and governance systems, and issuing erratic orders.
+Cinder Squad returned to Evergreen under rapidly deteriorating conditions. Patience, the colony’s NHP overseer, had become unstable—blocking communications, refusing aid to civilians, and issuing lockdown orders. Meanwhile, Beggar One’s Machine forces advanced from the south in overwhelming numbers, razing the Gray Towns and scattering any remaining militia resistance.
 
-Meanwhile, reports flood in from the surrounding Gray Towns—Merricktown and Liu Maize have fallen. Fires rage across the southern tree line. Machine forces—subalterns and corrupted mechs under the influence of the entity known as Beggar One—march steadily toward Evergreen in staggering numbers.
+As the sky darkened with ash and electromagnetic interference, a critical refugee crisis unfolded at Evergreen’s gates. With Patience refusing entry and the Militia divided, the squad made the call to let the refugees in. It saved thousands—but fractured Evergreen’s chain of command beyond repair.
 
-With panic rising and communications collapsing, Evergreen locks down. Civilians are left outside the gates. The Militia fractures under the pressure. Refugees riot. Command is contested. And in the midst of it all, the Machine waits.
+In the wake of this rebellion, Beggar One revealed himself on a system-wide broadcast. An orbital weapon struck the northern mountains, annihilating the subterranean city of Daylight and triggering powerful quakes that left Evergreen without power or cohesion.
+
+Still, Cinder Squad launched a last-ditch assault on the Governor’s Farm—now the Machine’s stronghold. They fought alongside loyal militia, Rangers, and defectors to kill Beggar One and free Evergreen. But they were ultimately overwhelmed. Captured and thrown into a makeshift prison, the remaining pilots must now plan their next move from behind enemy lines.
 
 ### MISSION OBJECTIVES
-- Prevent collapse of Evergreen’s defenses.
+- Prevent collapse of Evergreen’s defenses. (FAILED)
 
-- Aid the refugees outside Evergreen in any way possible.
+- Aid the refugees outside Evergreen in any way possible. (SUCCESS)
 
-- Monitor and assess Beggar One’s tactical behavior and deployment.
+- Monitor and assess Beggar One’s tactical behavior and deployment. (SUCCESS)
+
+- Attempt to kill or disable Beggar One. (FAILED)
+
+- Free imprisoned allies. (IN PROGRESS)
 
 ### CRITICAL TASKS
-## › MERRICKTOWN EVACUATION
-Upon encountering the ruins of Merricktown, Cinder Squad discovered signs of a recent subaltern massacre. Survivors were located and extracted under fire. Subaltern behavior suggests full override by foreign intelligence.
+## > MERRICKTOWN EVACUATION
+Cinder Squad encountered the aftermath of a massacre—subalterns had razed the settlement. Survivors were rescued under fire. Subalterns demonstrated full override behavior under foreign control.
 
 ## › REFUGEE STANDOFF
-Outside Evergreen’s walls, tensions boil over as refugees surge toward the gates, begging for sanctuary. The Militia, under Patience’s directive, denies entry. The pilots convince the militia to stand down, but the flood of incomming refugees quickly destabilises the area, resulting in anarchy and deaths on all sides.
+At Evergreen’s gates, the pilots chose to open the colony to the refugees, overriding Patience’s lockdown. Though this action saved lives, it sparked civil unrest and a fracture in command. Contingency White was activated as peacekeepers—then turned hostile.
 
 ## › FINAL TRANSMISSION
-Patience initiates a general colonial assembly, broadcasting a heavily-censored address citywide. Mid-transmission, Evergreen is rocked by a seismic event: Beggar One has deployed an orbital weapon, vaporizing the mountaintop North of the colony. The blast levels the underground city of Daylight and triggers ongoing tremors, plunging Evergreen into darkness.
+Patience issued one final broadcast—cryptic, evasive, and marked by distortion. Moments later, Beggar One’s orbital strike vaporized a northern peak, erasing the hidden city of Daylight and triggering citywide blackouts. Evergreen was plunged into chaos.
+
+## › FINAL TRANSMISSION
+Alongside Brava Hadura and loyalist forces, the pilots assaulted the Governor’s Farm. They clashed with Contingency White, killing Eddie, Mauler, and Emma, while Anne Laurent escaped capture. Psalm was freed by Outlaw, and Patience was destroyed by Vet. Ultimately, the squad was overrun and captured.
+
+› PRISONER’S DILEMMA
+Held in the Depot District, now a prison camp for Evergreen’s citizens, the squad begins plotting their next move. Vanisher identified a maintenance tunnel for escape. Vet planted explosives for a future distraction, though they must be triggered manually—Tyrell volunteers to make the sacrifice. Outlaw learned that Beggar One is attempting to forcibly access the Omninode using citizen credentials, and may be preparing something far worse with an ancient NHP casket brought into the complex.
 
 ### RESULTS & NOTES
-Merricktown and Liu Maize destroyed.
+- Merricktown and Liu Maize destroyed.
 
-Subalterns display coordinated behavior under Beggar One's command.
+- Refugee influx destabilized Evergreen and ignited civil conflict.
 
-Patience now considered fully compromised.
+- Patience is confirmed dead.
 
-Refugee crisis creates irreversible political fracture inside Evergreen.
+- Beggar One commands a fully autonomous army and has orbital strike capability.
 
-Enemy forces too numerous to repel. Defending Evergreen is no longer a viable strategy.
+- Contingency White has been decimated; remaining members demand extraction.
+
+- Cinder Squad is captured but actively organizing resistance from within.
+
+- Evergreen is under complete Machine occupation.
 
 ### MISSION STATUS
-This mission is ongoing, but Evergreen is lost in all but name. Any remaining hope lies in evacuation, sabotage, or subversion of Beggar One’s command structure. The longer the squad remains, the narrower the odds.
+MISSION FAILED — Evergreen has fallen.
+
+However, the mission continues in a new form. Sabotage, extraction, and the exposure of Beggar One’s true goal remain possible. The war for Evergreen is lost, but the war for Hercynia is not over.
 
 ### STAKES
-If Evergreen falls, Landmark Colonial loses its final stable colony in the southern hemisphere. With Patience compromised, NHP security protocols have failed. The threat posed by Beggar One is no longer theoretical—it is real, it is coordinated, and it has orbital support. Unless checked soon, Beggar One’s forces may secure a strategic foothold capable of contesting Hercynia at planetary scale.
+Beggar One’s access to the Omninode must be stopped. If successful, he will gain access to the Omninet. His forces are growing smarter, faster, and more coordinated, the threshold for Machine singularity may be near. Landmark’s last foothold in the hemisphere is gone. The only thing left is revenge, escape, or annihilation.
 
 
 ## AUTHORIZED BY:
