--- a/src/assets/missions/005.md
+++ b/src/assets/missions/005.md
@@ -1,9 +1,9 @@
 004 - B
 Rallying Cry
-start
+partial-success
 
-Mission // 004 - B
-RALLYING CRY
+**Mission // 004 - B**
+**RALLYING CRY**
 
 # RIPLEY: “You sent them out there and you didn’t even warn them, Burke. Why didn’t you warn them?”
 
@@ -13,7 +13,10 @@ RALLYING CRY
 
 # BURKE: “It was a bad call, that’s all.”
 
+---
+
 ### SITUATION OVERVIEW
+
 Hivehome lies broken. The cavern ceiling has collapsed. The sea has risen. The Overmind is silent.
 
 In the wake of Beggar One’s orbital strike on Daylight, Hivehome has been torn apart by quakes, fire, and flood. Endeavor, the Egregorian Overmind, was caught in a psychic backlash that severed their link to Witness. Without them, the Egregorians stagger forward under the leadership of Terror. Ranger units are scattered. Power and communications are down. Half the city is submerged or in ruins.
@@ -22,55 +25,72 @@ Survivors pour into the dark, wounded and afraid. Most of them are heading for M
 
 The pilots are among the few operable combatants left in Hivehome. Their mechs have been delivered from Helios Highpoint. Their mission: lead the exodus, or strike out alone.
 
+---
+
 ### MISSION OBJECTIVES
--Escort the survivors of Hivehome to Mycol Fields through unstable and contested terrain.
 
-- Defend refugee columns from collapse, flooding, Machine ambush, or panic.
+* Escort the survivors of Hivehome to Mycol Fields through unstable and contested terrain.
+* Defend refugee columns from collapse, flooding, Machine ambush, or panic.
+* Coordinate with Ranger remnants, stabilize command and morale.
+* Alternatively: break off and strike toward Evergreen to assess its condition and establish a forward base.
 
-- Coordinate with Ranger remnants, stabilize command and morale.
-
-- Alternatively: break off and strike toward Evergreen to assess its condition and establish a forward base.
+---
 
 ### CRITICAL TASKS
+
 ## › SALTLINE BROKEN
+
 The gondola carrying the pilots' mechs is struck by falling debris and crashes into a burning district. The team must recover their gear on foot through chaos and ruin.
 
 ## › THE DESCENT
+
 As Hivehome collapses around them, the pilots navigate a gauntlet of crisis events: civilians in peril, hostile subalterns, falling debris, chasms, and the haunting reappearance of a figure on horseback, watching from the firelit boulevards.
 
 ## › THE PRICE OF MERCY
+
 To save Tallgrass, Huntsman is forced to amputate the young Egregorian’s legs. The psychic backlash through Witness leaves deep scars in both. Tallgrass is stabilized, but forever changed.
 
 ## › THE BEAR
+
 Smokey lifts a crumbling building long enough to evacuate a family. All but one make it out—a small girl, who gifts him her stuffed bear before dying.
 
+## › VENGEANCE FOR HIVEHOME
+
+In the days following, Smokey gathers what little remains of Hivehome’s salvageable gear. With effort and vision, he constructs a specialized combat frame for Tallgrass—a manifestation of Egregorian memory and wrath. The mech is christened: **RITESHARD**.
+
+---
+
 ### RESULTS & NOTES
-Hivehome devastated. Estimated 300,000 dead or unaccounted for.
 
-Endeavor unresponsive. Egregorian culture and Witness strained.
+* Hivehome devastated. Estimated 300,000 dead or unaccounted for.
+* Endeavor unresponsive. Egregorian culture and Witness strained.
+* Daylight obliterated; confirmed orbital strike.
+* Mycol Fields intact and accepting survivors.
+* Players successfully recovered mechs and assisted in multiple key rescues.
+* Ferryman lost. Presumed dead or cut off.
+* Tallgrass maimed. Witness connection between him and Huntsman severely altered.
+* Smokey constructed RITESHARD, a unique Tier 3 Egregorian vengeance-frame.
+* Huntsman spotted by Machine scouts during recon of the route to Mycol Fields.
 
-Daylight obliterated; confirmed orbital strike.
-
-Mycol Fields intact and accepting survivors.
-
-Players successfully recovered mechs and assisted in multiple key rescues.
-
-Ferryman lost. Presumed dead or cut off.
-
-Tallgrass maimed. Witness connection between him and Huntsman severely altered.
-
+---
 
 ### MISSION STATUS
-Active.
+
+**Active.**
 Refugee convoys are en route to Mycol Fields. The squad is embedded among them or diverted toward Evergreen. Hivehome cannot be salvaged. Future missions will determine the status of Evergreen, the fate of Patience, and whether Beggar One’s advance can be stopped.
 
+---
+
 ### STAKES
+
 If Mycol Fields collapses under the weight of refugee pressure or Machine assault, the last organized resistance in the region will dissolve. If Evergreen cannot be reached or fortified, the Machine’s control will spread unchecked across the continent.
 
 Cinder Squad are now among the most experienced and capable individuals left in the theater. Their choices will shape what rises from the ashes of Daylight and Hivehome.
 
+---
 
 ## AUTHORIZED BY:
-# Haruki Oda
+
+# **Haruki Oda**
 # Union Administrative Liaison
 # Operational Command, Hercynia Crisis Response
