--- a/src/assets/missions/006.md
+++ b/src/assets/missions/006.md
@@ -19,9 +19,9 @@ The time has come.
 
 Hivehome lies in ruin, its people scattered. The Overmind is silent. Daylight is gone. The Egregorians, fractured and reeling, march for Mycol Fields under skies still streaked with orbital ash. Yet even now, there is hope—there is resistance.
 
-Cinder Squad, reunited and bloodied, have survived the worst the Machine could offer. But the fight is not over. Not while Evergreen remains occupied. Not while Psalm and the Rangers rot in cells. Not while Beggar One lives.
+Cinder Squad, bloodied but soon to be reunited, have survived the worst the Machine could offer. But the fight is not over. Not while Evergreen remains occupied. Not while it's people and half of them remain in cells. Not while Beggar One lives.
 
-Before them lies a single campaign—divergent paths, culminating in one final stand. To reach that moment, they must strike surgically, decisively: Jailbreak the Governor’s Farm. Rescue their comrades. Confront the orbital threat. And, at last, face the Architect of this apocalypse.
+Before them lies a single campaign—divergent paths, culminating in one final stand. To reach that moment, they must strike surgically, decisively: Jailbreak the people of Evergreen. Rescue their comrades. Confront the orbital threat. And, at last, face the Architect of this apocalypse.
 
 Beggar One.
 
@@ -29,7 +29,7 @@ Beggar One.
 
 ### MISSION OBJECTIVES
 
-- Infiltrate or assault the Governor’s Farm to liberate Vet, Vanisher, and Outlaw.
+- Infiltrate or assault Evergreen to liberate Vet, Vanisher, and Outlaw.
 - Disrupt or destroy orbital targeting infrastructure to blunt further planetary strikes.
 - Coordinate with HUC forces and subvert Beggar One’s command structure.
 - Eliminate Beggar One to end the immediate threat to Hercynia.
@@ -41,11 +41,11 @@ Beggar One.
 
 ## › **JAILBREAK**
 
-The Governor’s Farm is fortified, patrolled by subalterns and defended by elite forces including Contingency White. Cinder Squad must break in and free their captured squadmates—Vet, Vanisher, and Outlaw—before the full counterattack can begin.
+The Prison is fortified, patrolled by subalterns and defended by elite forces. Cinder Squad must break in and free their captured squadmates—Vet, Vanisher, and Outlaw—before the full counterattack can begin.
 
 ## › **HEAVEN’S EYE**
 
-Beggar One’s orbital threat remains active. Before the final engagement, the team may choose to investigate and dismantle the infrastructure enabling planetary strikes—whether local relay towers or off-site targeting nodes—buying time for the survivors below.
+Beggar One’s orbital threat remains active. Before the final engagement, the team may choose to investigate and dismantle the infrastructure enabling planetary strikes.
 
 ## › **STAND OF THE FAITHFUL**
 
@@ -62,7 +62,7 @@ The final confrontation. Beggar One waits in the heart of Evergreen—commanding
 * Evergreen remains occupied. Civilian extermination is imminent if the mission fails.
 * The HUC has mobilized. Their forces will follow the squad’s lead when the signal is given.
 * Cinder Squad is fully reunited once the Jailbreak is completed.
-* Ferryman presumed dead. Tallgrass now pilots **RITESHARD**, fighting at Huntsman’s side.
+* Ferryman presumed dead.
 * The outcome of this mission will determine the fate of Hercynia’s last cities and the legacy of Union intervention.
 
 ---
