--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -1,34 +1,35 @@
 001
-bug hunt
-success
-
-Mission // 001
 Milk Run
+Start
 
-### SITUATION OVERVIEW
+### Mission // 001
+
+## MILK RUN
+
+## SITUATION OVERVIEW
 
 After a grueling 6 months of little to no activity, the Rio Grande has finally reached Cressidium. As the only Lancer-Tier pilots assigned to this backwater, you've been given the presigious position of Bodyguards to Ambassador Bannerjee and Captain Farris.
 
-### OBJECTIVES
+## OBJECTIVES
 
 - Rendezvous ‘in uniform’ (read: in mech) with Captain Farris and Ambassador Bannerjee at FOB Saber.
 
-### PARAMETERS
+## PARAMETERS
 
 - Peacetime security. Do not fire unless fired upon.
 
-### STAKES
+## STAKES
 
 - Deter hostilities, but maintain proper decorum. The negotiations must remain stable.
 
-### REWARD
+## REWARD
 
 - Commendations for a License Level increase.
 
-### RESERVES: 
+## RESERVES: 
 
 - None.
 
-## AUTHORIZED BY:
+### AUTHORIZED BY:
 # CAPTAIN BRIGID FARRIS
 # THE UNS-CV RIO GRANDE
