--- a/src/assets/events/000.md
+++ b/src/assets/events/000.md
@@ -1,44 +1,6 @@
-IDEAS FROM THE PAST
-HERCYNIA
-~4500u - 5000u?
-https://i.imgur.com/pAInpSQ.png
+INTEL PACKAGE
+CRESSIDIUM
+1016u
+https://i.imgur.com/JjgOUmB.png
 
 ## OVERVIEW:
-
-Upon arrival at Evergreen, the squad was briefed on the long-forgotten history of Union’s prior contact with Hercynia — a planet whose past is not just obscured by time, but by deliberate omission. What little remains of official records points to an ecological and ethical catastrophe carried out by the Second Committee.
-
-Of particular note is a recovered field report titled “On Egregorians: A Summary Report” by Dr. Eku Marricado, an Evergreen colonial scientist. Though riddled with gaps and speculation, the document paints a compelling — and disturbing — picture of what transpired here centuries ago.
-
-The squad has not encountered any living Egregorians, but signs of their legacy — and the trauma of their extermination — remain.
-
-## KEY INSIGHTS:
-1. First Contact & Extermination
-   
-Hercynia was discovered in the early 46th century by a Second Committee Far Field team. Contact was made with the native species, later termed the Egregorians — eusocial, insectoid predators exhibiting swarm intelligence and rudimentary tool use. Within years, these same species were wiped out via a Total Biome Kill (TBK) operation. No formal justification has survived the purges of the Revolution.
-
-3. The Wargame Hypothesis
-
-Dr. Marricado's most provocative theory suggests that the Egregorians were deliberately trained by Second Committee forces to serve as biological stand-ins for war exercises. Their capacity for learning, communication, and tool-use made them ideal — until it made them lethal. Taught to use weapons and tactics, the Egregorians eventually turned these tools against their instructors.
-
-4. Catastrophic Escalation
-   
-The escalation of hostilities saw the Egregorians evolve rapidly, adapting to human strategies and becoming more deadly with each engagement. The war became a mirror — Union’s own tools and tactics reflected back through alien minds. Unable to control their own creation, Second Committee ordered planetary sterilization.
-
-6. Ethical Fallout
-   
-There is some suggestion that certain civilian personnel may have sided with the Egregorians — an act of rebellion that SecComm met with mass retaliation. In the end, no distinction was made between species. The campaign of extinction became total.
-
-8. What Remains
-   
-No verified Egregorian lifeforms have been found in modern times. Some chitinous remnants and fossil traces remain, along with fragmented hive structures. Whether the Egregorians were truly wiped out or merely forced into dormancy remains unknown.
-
-## CONSIDERATIONS:
-
-This report reflects theory, not confirmed history.
-
-Dr. Marricado’s conclusions are speculative, based on partial reconstructions.
-
-No official apology or investigation into SecComm actions on Hercynia has ever been declassified.
-
-# CLASSIFIED ADDENDUM:
-# As members of Union’s Hercynia Crisis Response, you are authorized to review this material. However, Union protocol requires that any new evidence related to Egregorian survival, behavior, or evolution be reported immediately to Union for further consideration.
