--- a/src/assets/events/000.md
+++ b/src/assets/events/000.md
@@ -1,9 +1,9 @@
-INTEL PACKAGE
-CRESSIDIUM
+CRESSIDIUM AT A GLANCE
+UNION INTELLIGENCE DOSSIER
 5016u
 https://i.imgur.com/JjgOUmB.png
 
-# I. PLANETARY OVERVIEW:
+### I. PLANETARY OVERVIEW:
 
 - Designation: Cressidium
 - Type: Cradle-class planet, Cascade Line position
@@ -11,7 +11,7 @@ https://i.imgur.com/JjgOUmB.png
 - Surface: Predominantly oceanic with large continental landmasses and archipelagos.
 - Population: Continuous human habitation for ~500 years. Development of large nation-states and blocs.
 
-# II. MAJOR POLITICAL ENTITIES
+### II. MAJOR POLITICAL ENTITIES
 
 ## 1. Leandric States Alliance (LSA)
 
@@ -35,13 +35,13 @@ https://i.imgur.com/JjgOUmB.png
 
 - Secondary role in current tensions.
 
-# III. STRATEGIC SITUATION
+### III. STRATEGIC SITUATION
 
 - Conflict Status: LSA vs. Sovereignty engaged in long-term cold war. Proxy conflicts and hostile diplomacy common. Outright war has been avoided for decades.
 
 - Current Outlook: Volatile. Resurgence of Sovereignty hardliners may destabilize diplomatic progress.
 
-# IV. SOCIETAL CHARACTERISTICS
+### IV. SOCIETAL CHARACTERISTICS
 
 - Predominantly isolationist until recent decades.
 
@@ -51,7 +51,7 @@ https://i.imgur.com/JjgOUmB.png
 
 - Current orbital forces: Deterrence doctrine. Roles include anti-satellite operations and limited orbit-to-surface strikes.
 
-# V. TECHNOLOGICAL BASELINE
+### V. TECHNOLOGICAL BASELINE
 
 - Despite isolation, development generally matches galactic norms in conventional science and engineering.
 
@@ -63,6 +63,6 @@ https://i.imgur.com/JjgOUmB.png
 
 - Union Leverage: Provision of modern printer technology is primary incentive in accession negotiations.
 
-# VI. ASSESSMENT
+### VI. ASSESSMENT
 
 Cressidium represents a strategically significant, self-sustaining Cradle world along the Cascade Line. While isolationist history has limited exposure to Union hegemony, local governments maintain robust industrial and military capacity. Current cold war dynamics present both risk and opportunity: collapse into open conflict could destabilize the system, while successful Union engagement could secure a valuable ally and forward operating position.
